--- a/gstreamer/po/bg.po
+++ b/gstreamer/po/bg.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-04 23:00+0100\n"
+"POT-Creation-Date: 2009-09-11 23:09+0100\n"
 "PO-Revision-Date: 2009-05-14 07:37+0300\n"
 "Last-Translator: Alexander Shopov <ash@contact.bg>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
@@ -305,6 +305,20 @@ msgstr "албум, ползва се при подреждане"
 
 msgid "album containing this data for sorting purposes"
 msgstr "албум съдържащ тези данни, ползва се при подреждане"
+
+#, fuzzy
+msgid "album artist"
+msgstr "изпълнител"
+
+msgid "The artist of the entire album, as it should be displayed"
+msgstr ""
+
+#, fuzzy
+msgid "album artist sortname"
+msgstr "име на изпълнител, ползва се при подреждане"
+
+msgid "The artist of the entire album, as it should be sorted"
+msgstr ""
 
 msgid "date"
 msgstr "дата"
