--- a/gstreamer/po/es.po
+++ b/gstreamer/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-04 23:00+0100\n"
+"POT-Creation-Date: 2009-09-11 23:09+0100\n"
 "PO-Revision-Date: 2009-06-11 14:08+0200\n"
 "Last-Translator: Jorge González González <aloriel@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
@@ -306,6 +306,20 @@ msgstr "nombre corto del álbum"
 
 msgid "album containing this data for sorting purposes"
 msgstr "el álbum que contiene estos datos para propósitos de ordenamiento"
+
+#, fuzzy
+msgid "album artist"
+msgstr "artista"
+
+msgid "The artist of the entire album, as it should be displayed"
+msgstr ""
+
+#, fuzzy
+msgid "album artist sortname"
+msgstr "nombre corto del artista"
+
+msgid "The artist of the entire album, as it should be sorted"
+msgstr ""
 
 msgid "date"
 msgstr "fecha"
