--- a/gst-plugins-base/po/af.po
+++ b/gst-plugins-base/po/af.po
@@ -7,12 +7,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins 0.7.6\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-13 10:58+0100\n"
+"POT-Creation-Date: 2009-09-11 23:31+0100\n"
 "PO-Revision-Date: 2004-03-18 14:16+0200\n"
 "Last-Translator: Petri Jooste <rkwjpj@puk.ac.za>\n"
 "Language-Team: Afrikaans <i18n@af.org.za>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Master"
@@ -97,7 +97,7 @@ msgstr "Kon nie CD-toestel oopmaak om te lees nie."
 
 #, fuzzy
 msgid "Could not seek CD."
-msgstr "Kon nie vfs-lêer \"%s\" toemaak nie."
+msgstr "Kon nie vfs-lÃªer \"%s\" toemaak nie."
 
 #, fuzzy
 msgid "Could not read CD."
@@ -105,19 +105,19 @@ msgstr "Kon nie skryf na toestel \"%s\" nie."
 
 #, fuzzy, c-format
 msgid "Could not open vfs file \"%s\" for writing: %s."
-msgstr "Kon nie vfs-lêer \"%s\" oopmaak vir skryf nie."
+msgstr "Kon nie vfs-lÃªer \"%s\" oopmaak vir skryf nie."
 
 #, fuzzy
 msgid "No filename given"
-msgstr "Geen lêernaam gespesifiseer."
+msgstr "Geen lÃªernaam gespesifiseer."
 
 #, c-format
 msgid "Could not close vfs file \"%s\"."
-msgstr "Kon nie vfs-lêer \"%s\" toemaak nie."
+msgstr "Kon nie vfs-lÃªer \"%s\" toemaak nie."
 
 #, fuzzy, c-format
 msgid "Error while writing to file \"%s\"."
-msgstr "Fout tydens toemaak van lêer \"%s\"."
+msgstr "Fout tydens toemaak van lÃªer \"%s\"."
 
 msgid "Internal data stream error."
 msgstr ""
@@ -131,7 +131,7 @@ msgstr ""
 
 #, fuzzy
 msgid "Could not determine type of stream"
-msgstr "Kon nie skryf na lêer \"%s\" nie."
+msgstr "Kon nie skryf na lÃªer \"%s\" nie."
 
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
@@ -226,11 +226,11 @@ msgstr "Geen toestel gespesifiseer"
 
 #, fuzzy, c-format
 msgid "Could not create temp file \"%s\"."
-msgstr "Kon nie skryf na lêer \"%s\" nie."
+msgstr "Kon nie skryf na lÃªer \"%s\" nie."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
-msgstr "Kon nie lêer \"%s\" oopmaak om te lees nie."
+msgstr "Kon nie lÃªer \"%s\" oopmaak om te lees nie."
 
 msgid "Internal data flow error."
 msgstr ""
@@ -254,11 +254,11 @@ msgstr ""
 
 #, fuzzy
 msgid "Could not create \"typefind\" element."
-msgstr "Kon nie skryf na lêer \"%s\" nie."
+msgstr "Kon nie skryf na lÃªer \"%s\" nie."
 
 #, fuzzy, c-format
 msgid "Error while sending data to \"%s:%d\"."
-msgstr "Fout tydens toemaak van lêer \"%s\"."
+msgstr "Fout tydens toemaak van lÃªer \"%s\"."
 
 #, c-format
 msgid "Error while sending gdp header data to \"%s:%d\"."
@@ -511,17 +511,17 @@ msgstr "Kon nie toestel \"%s\" oopmaak vir lees en skryf nie."
 #~ msgstr "Toestel is oop."
 
 #~ msgid "Could not open vfs file \"%s\" for reading."
-#~ msgstr "Kon nie vfs-lêer \"%s\" oopmaak vir lees nie."
+#~ msgstr "Kon nie vfs-lÃªer \"%s\" oopmaak vir lees nie."
 
 #, fuzzy
 #~ msgid "No filename given."
-#~ msgstr "Geen lêernaam gespesifiseer."
+#~ msgstr "Geen lÃªernaam gespesifiseer."
 
 #~ msgid "Could not open file \"%s\" for writing."
-#~ msgstr "Kon nie lêer \"%s\" oopmaak om in te skryf nie."
+#~ msgstr "Kon nie lÃªer \"%s\" oopmaak om in te skryf nie."
 
 #~ msgid "No filename specified."
-#~ msgstr "Geen lêernaam gespesifiseer."
+#~ msgstr "Geen lÃªernaam gespesifiseer."
 
 #~ msgid "No or invalid input audio, AVI stream will be corrupt."
 #~ msgstr "Geen of ongeldige klanktoevoer, AVI-stroom sal korrup wees."
